# pick_and_place_robot_simulation

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_control/lib/robot_control/: pick_and_place_node
install/robot_control/share/robot_control/: package.sh  package.xml
install/robot_description/share/robot_description/: package.sh  package.xml
log/: latest_build
src/robot_control/: setup.py
src/robot_control/launch/: pick_and_place_launch.py
src/robot_description/: arm.urdf.xacro  setup.py
src/robot_description/launch/: rsp_launch.py
